<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Commuter</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_closed">Navigation Drawer Closed</string>
    <string name="record">Record</string>
    <string name="finish_caps">FINISH ROUTE</string>
    <string name="start_caps">START ROUTE</string>
    <string name="pause_caps">GREEN LIGHT</string>
    <string name="resume_caps">RED LIGHT</string>
    <string name="total_time_caps">TOTAL TIME</string>
    <string name="time_stopped_caps">TIME STOPPED</string>
    <string name="time_zero">00:00</string>

</resources>
