<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.austindroids.commuter.widgets.ButtonMedium
        android:id="@+id/button_start_route"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_large"
        android:textSize="@dimen/text_large_button"
        android:background="@drawable/button_green"
        android:textColor="@color/black_background"
        android:text="@string/start_caps"/>

    <com.austindroids.commuter.widgets.ButtonMedium
        android:id="@+id/button_pause"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_large"
        android:textSize="@dimen/text_large_button"
        android:background="@drawable/button_green"
        android:textColor="@color/black_background"
        android:text="@string/resume_caps"
        android:visibility="gone"/>

    <com.austindroids.commuter.widgets.ButtonMedium
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_large"
        android:textSize="@dimen/text_large_button"
        android:background="@drawable/button_red"
        android:textColor="@color/black_background"
        android:text="@string/pause_caps"
        android:visibility="gone"/>

</LinearLayout>