<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <com.austindroids.commuter.widgets.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_main"
                android:textSize="@dimen/text_header"
                android:layout_gravity="center"
                android:text="@string/total_time_caps"/>

            <com.austindroids.commuter.widgets.TextViewMedium
                android:id="@+id/time_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_zero"
                android:textColor="@color/orange_main"
                android:textSize="@dimen/text_xxlarge"
                android:layout_gravity="center"
                tools:text="100:00"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <com.austindroids.commuter.widgets.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_main"
                android:textSize="@dimen/text_header"
                android:layout_gravity="center"
                android:text="@string/time_stopped_caps"/>

            <com.austindroids.commuter.widgets.TextViewMedium
                android:id="@+id/time_stopped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_main"
                android:textSize="@dimen/text_xxlarge"
                android:layout_gravity="center"
                android:text="@string/time_zero"/>

        </LinearLayout>

</LinearLayout>